# WiertarBot

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .mypy.ini  Dockerfile  Makefile  Może się uda  Tiltfile  alipaczka.py  bot.py  build.gradle.kts  config.py  db_schema.sql  docker-compose.yml  gradle.properties  main.py  mobidziennik.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.gradle.kts
.circleci/: config.yml
.github/workflows/: build.main.kts  build.yaml  codeql-analysis.yml  dockerhub-deploy.yml  lint.yaml  validate-wrapper.yaml
WiertarBot/: __init__.py  __main__.py  abc.py  bot.py  context.py  db.py  dispatch.py  events.py  listeners.py  message_dispatch.py  milestone.py  perm.py  response.py  sentry.py  statistics.py  typing.py  unlock.py  utils.py
WiertarBot/abc/: __init__.py  connector.py  context.py
WiertarBot/commands/: ABCImageEdit.py  __init__.py  image_editing.py  random_images.py  special.py  standard.py  utils.py
WiertarBot/commands/media/random/: szkaluj.txt
WiertarBot/commands/modules/: __init__.py  alipaczka.py  fantano.py  mobidziennik.py
WiertarBot/config/: __init__.py  _config.py  _constants.py  _data.py  _utils.py  config.py  db_schema.sql
WiertarBot/connectors/: __init__.py
WiertarBot/connectors/fb/: FBConnector.py  FBContext.py  __init__.py  dispatch.py  generic.py  listeners.py  milestone.py
WiertarBot/database/: __init__.py  models.py  repositories.py
WiertarBot/fbchat/: __init__.py  _client.py  _exception.py  _listen.py  _session.py
WiertarBot/fbchat/_events/: __init__.py  _client_payload.py  _common.py  _delta_class.py  _delta_type.py
WiertarBot/fbchat/_models/: __init__.py  _attachment.py  _common.py  _file.py  _location.py  _message.py  _quick_reply.py
WiertarBot/fbchat/_threads/: _abc.py  _group.py  _page.py
WiertarBot/integrations/: __init__.py  health.py  rabbitmq.py  sentry.py  statistics.py  unlock.py
WiertarBot/stubs/aiogoogletrans/: __init__.pyi  client.pyi  constants.pyi  gtoken.pyi  models.pyi  urls.pyi  utils.pyi
WiertarBot/stubs/aiogtts/: __init__.pyi  lang.pyi  tts.pyi  utils.pyi
WiertarBot/stubs/aiogtts/tokenizer/: __init__.pyi  core.pyi  pre_processors.pyi  symbols.pyi  tokenizer_cases.pyi
WiertarBot/stubs/fbchat/: __init__.pyi  _client.pyi  _common.pyi  _exception.pyi  _fix_module_metadata.pyi  _graphql.pyi  _listen.pyi  _session.pyi  _util.pyi
WiertarBot/stubs/fbchat/_events/: __init__.pyi  _client_payload.pyi  _common.pyi  _delta_class.pyi  _delta_type.pyi
WiertarBot/stubs/fbchat/_models/: _attachment.pyi  _common.pyi  _file.pyi  _location.pyi  _message.pyi  _plan.pyi  _poll.pyi  _quick_reply.pyi  _sticker.pyi
WiertarBot/stubs/fbchat/_threads/: _abc.pyi  _group.pyi  _page.pyi  _user.pyi
WiertarBot/stubs/forex_python/: bitcoin.pyi  converter.pyi
WiertarBot/typing/: __init__.py  dispatch.py  models.py
config/detekt/: detekt.yml
data/media/random/: szkaluj.txt
dev/: connector-telegram.yml  core.yml  docker-compose.yml  download-api.yml  flyway.user.toml  rabbitmq.json
docker/: Dockerfile  application.yml  docker-compose.yml  init.sh
fbchat-asyncio/: LICENSE  pyproject.toml  pytest.ini
fbchat-asyncio/fbchat/: __init__.py  _common.py  _fix_module_metadata.py  _listen.py  _session.py  _util.py
fbchat-asyncio/fbchat/_events/: __init__.py  _client_payload.py  _common.py  _delta_class.py  _delta_type.py
fbchat-asyncio/fbchat/_models/: _common.py  _file.py  _location.py  _quick_reply.py  _sticker.py
fbchat-asyncio/fbchat/_threads/: _abc.py  _user.py
fbchat-asyncio/tests/: conftest.py  test_exception.py  test_session.py
fbchat-asyncio/tests/events/: test_client_payload.py  test_delta_type.py
fbchat-asyncio/tests/threads/: test_group.py
gradle/: libs.versions.toml
libs/connector/: build.gradle.kts
libs/core-proto/: build.gradle.kts
libs/core-proto/src/main/proto/: attachment.proto  connector.proto  context.proto  event.proto
libs/fbchat-kt/: build.gradle.kts
libs/telegram-kt/: build.gradle.kts
libs/toon/: build.gradle.kts
services/cex-api/: Dockerfile  go.mod  go.sum  main.go
services/connector-fb/: .dockerignore  .gitignore  Dockerfile  build.gradle.kts
services/connector-fb/src/main/resources/: banner.txt
services/connector-telegram/: Dockerfile  build.gradle.kts
services/connector-telegram/src/main/resources/: banner.txt
services/core/: .gitignore  Dockerfile  build.gradle.kts
services/core/WiertarBot/: log.py  response.py  services.py
services/core/WiertarBot/config/: __init__.py
services/core/WiertarBot/connectors/: __init__.py
services/core/WiertarBot/connectors/fb/: FBContext.py  __init__.py
services/core/WiertarBot/database/: __init__.py  repositories.py
services/core/WiertarBot/fbchat/: _client.py  _graphql.py  _listen.py  _session.py  _util.py
services/core/WiertarBot/fbchat/_events/: __init__.py  _common.py
services/core/WiertarBot/fbchat/_models/: _attachment.py  _message.py  _sticker.py
services/core/WiertarBot/fbchat/_threads/: _user.py
services/core/docker/: docker-compose.yml  init.sh
services/core/src/main/resources/: application.yml  banner.txt
services/core/tests/: test_milestone.py
services/core/tests/fbchat/: test_session.py  test_util.py
services/download-api/: .gitignore  Dockerfile  build.gradle.kts
services/migration/: Dockerfile  flyway.toml
services/migration/migrations/: V001_init.sql  V002_aimessage.sql  V003_cache.sql  V004_aimessage_media.sql
services/ttrs-api/: Dockerfile  main.py  pyproject.toml
services/ttrs-api/src/: main.py
src/main/resources/: application-dev.yml
tests/: test_milestone.py
tests/fbchat/: conftest.py  test_exception.py  test_graphql.py  test_module_renaming.py
tests/fbchat/events/: test_delta_class.py  test_delta_type.py
tests/fbchat/models/: test_attachment.py
tests/fbchat/online/: test_send.py
tests/fbchat/threads/: test_group.py  test_page.py  test_thread.py  test_user.py
tools/: peewee_initial_migration.py
ttrs-api/: Dockerfile  pyproject.toml
(+354 files in other folders)
