[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "WiertarBot"
authors = ["kvgx12"]
version = "0.0.0"
description = ""
license = "GPL-3.0-only"
packages = [{include="WiertarBot"}]

[tool.poetry.dependencies]
python = "^3.9"

aiofiles = "^0"
aiohttp = "^3"
attrs = "^22"
beautifulsoup4 = "^4"
dacite = "^1"
lxml = "^4"
paho-mqtt = "^1"
pytz = "^2022"
requests = "^2"
returns = "^0"
sentry-sdk = "^1"
uritemplate = "^4"
urllib3 = "^1"
yarl = "^1"
jep = "==4.1.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "~1"
types-requests = "~2"
types-PyYAML = "~6"
types-aiofiles = "~0"
types-beautifulsoup4 = "~4"
types-urllib3 = "~1"
types-pytz = "~2022"
pytest = "~7"
pytest-benchmark = "~4"
pytest-asyncio = "~0"

[tool.poetry.group.local.dependencies]
fbchat = { path = "./fbchat-asyncio" }
