[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "WiertarBot"
authors = ["kvgx12"]
version = "0.0.0"
description = ""
license = "GPL-3.0-only"
packages = [{include="WiertarBot"}]

[tool.poetry.dependencies]
python = "^3.11"

aiofiles = "^0"
aiohttp = "^3"
attrs = "^22"
beautifulsoup4 = "^4"
dacite = "^1"
lxml = "^4"
pytz = "^2022"
requests = "^2"
returns = "^0"
sentry-sdk = "^1"
uritemplate = "^4"
urllib3 = "^1"
jep = "==4.1.1"
yarl = "*"
paho-mqtt= "^1.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "*"
types-requests = "*"
types-PyYAML = "*"
types-aiofiles = "*"
types-beautifulsoup4 = "*"
types-urllib3 = "*"
types-pytz = "*"
pytest = "*"
#pytest = ">=4.3,<6.0"
pytest-benchmark = "*"
pytest-asyncio = "*"
