[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "fbchat"

[project]
name = "fbchat-asyncio-kvgx12"
authors = [
    {name = "kvgx12", email = "szczepan7700@gmail.com"}
]
license = {file="LICENSE"}
dynamic = ["description", "version"]

requires-python = ">=3.9"

dependencies = [
    "attrs>=19.1",
    "beautifulsoup4~=4.0",
    "aiohttp",
    "yarl",
    "paho-mqtt~=1.5",
]

[project.optional-dependencies]
proxy = [
    "aiohttp-socks",
    "pysocks"
]
test = [
    "pytest>=4.3,<6.0",
]
lint = [
    "black",
    "pyright"
]