[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fbchat"
authors = ["kvgx12"]
version = "0.0.0"
description = ""
license = "BSD-3-Clause"
packages = [{include="fbchat"}]


[tool.poetry.dependencies]
python = "^3.9"
attrs = ">=19.1"
beautifulsoup4 = "^4.0"
aiohttp = "*"
yarl = "*"
paho-mqtt= "^1.5"

[tool.poetry.group.test.dependencies]
pytest = ">=4.3,<6.0"

[tool.poetry.group.test]
optional = true
