[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ttrs-api"
authors = ["kvgx12"]
version = "0.0.0"
description = ""
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"

sentry-sdk = {version="^1", extras=["flask"]}
flask = "^2"
gTTS = "^2"
translatepy = "^2"
gunicorn = {version="^20", extras=["gevent"]}
markupsafe = "^2"
dacite = "^1"
requests = "^2"
