[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ttrs-api"
authors = ["kvgx12"]
version = "0.0.0"
description = ""
license = "GPL-3.0-only"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"

gTTS = "^2"
translatepy = "^2"

sentry-sdk = "^2"
dacite = "^1"
requests = "^2"
aiohttp = "^3"
